<resources>
    <string name="app_name">War Sound</string>
    <string name="title">War Sound</string>
    <string name="subtitle">Battlefield alerts and signal bursts</string>
    <string name="ready_message">Ready for signal.</string>
    <string name="now_playing">Now playing: %1$s</string>
    <string name="air_raid">Air Raid</string>
    <string name="radio_chatter">Radio Chatter</string>
    <string name="battle_alarm">Battle Alarm</string>
    <string name="march_beat">March Beat</string>
    <string name="morse_signal">Morse Signal</string>
    <string name="attention_call">Attention Call</string>
    <string name="hold_position">Hold Position</string>
    <string name="evac_signal">Evac Signal</string>
    <string name="drone_hover">Drone Hover</string>
    <string name="drone_approach">Drone Approach</string>
    <string name="drone_swarm">Drone Swarm Alert</string>
    <string name="stop">Stop</string>
    <string name="status_idle">Status green. Awaiting command.</string>
    <string name="status_active">Signal live: %1$s</string>
    <string name="badge_air">AIR</string>
    <string name="badge_radio">COM</string>
    <string name="badge_alarm">ALM</string>
    <string name="badge_march">MRH</string>
    <string name="badge_morse">MOS</string>
    <string name="badge_attention">ATTN</string>
    <string name="badge_hold">HOLD</string>
    <string name="badge_evac">EVAC</string>
    <string name="badge_hover">HOVR</string>
    <string name="badge_approach">DRON</string>
    <string name="badge_swarm">SWRM</string>
</resources>
